# forge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  forge.schema.json  install.sh
.github/workflows/: release.yml
examples/init-test/: forge.toml
examples/init-test/infra/: forge.toml
examples/init-test/libs/shared/: forge.toml
examples/init-test/services/api/: forge.toml  server.py
examples/init-test/services/auth/: forge.toml  server.py
examples/init-test/services/gateway/: forge.toml  server.js
examples/init-test/services/worker/: forge.toml  worker.sh
examples/init-test/web/portal/: forge.toml  server.js
src/: cache.rs  cli.rs  commands.rs  init.rs  inspect.rs  main.rs  resolver.rs  upgrade.rs
src/config/: mod.rs  scanner.rs  service.rs  validate.rs  workspace.rs
src/graph/: mod.rs
src/log/: collector.rs
src/output/: json.rs  live_list.rs  mod.rs  table.rs  topo.rs
src/process/: health.rs  mod.rs  platform.rs  restart.rs  runner.rs
src/supervisor/: client.rs  daemon.rs  mod.rs  protocol.rs  server.rs
src/tui/: dag.rs
