[package]
name = "forge-cli"
version = "0.1.9"
edition = "2024"

[[bin]]
name = "fr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
petgraph = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
colored = "3"
comfy-table = "7"
dirs = "6"
glob = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
ctrlc = "3"
dialoguer = "0.11"
unicode-width = "0.2"
crossterm = "0.28"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
